--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -137,8 +137,8 @@
 			</a>
 		</td> 
 		<td class="text-right"> 
-			Total: <!-- tmpl_var total_recipients -->, 
-			Delivered: <!-- tmpl_var received --> - <!-- tmpl_var received_percent -->%
+			Total: <!-- tmpl_var total_recipients_commified -->, 
+			Delivered: <!-- tmpl_var received_commified --> - <!-- tmpl_var received_percent -->%
 		</td>
 	</tr>
 	<tr>
@@ -171,7 +171,7 @@
 		</td> 
 		<td class="text-right"> 
 			<a href="#clickthroughs">
-				Total: <!-- tmpl_var clickthroughs -->
+				Total: <!-- tmpl_var clickthroughs_commified -->
 				<!-- tmpl_if expr="(
 					(
 						(list_settings.tracker_track_email == 1)
@@ -231,7 +231,7 @@
 		</td> 
 		<td class="text-right"> 
 			<a href="#sending_errors">
-				<!-- tmpl_var errors_sending_to  default="0" -->
+				<!-- tmpl_var errors_sending_to_commified  default="0" -->
 				<!-- tmpl_if errors_sending_to -->
 					- <!-- tmpl_var errors_sending_to_percent -->%
 				<!-- /tmpl_if -->
@@ -247,7 +247,7 @@
 		</td> 
 		<td class="text-right"> 
 			<a href="#abuse_reports">
-				<!-- tmpl_var abuse_report  default="0" --> 
+				<!-- tmpl_var abuse_report_commified  default="0" --> 
 			</a>
 		</td> 
 	</tr>
@@ -260,7 +260,7 @@
 		</td> 
 		<td class="text-right"> 
 			<a href="#archive_views">
-				<!-- tmpl_var view_archive default="0"-->
+				<!-- tmpl_var view_archive_commified default="0"-->
 			</a> 
 		</td> 
 	</tr>
@@ -272,7 +272,7 @@
 		</td> 
 		<td class="text-right"> 
 			<a href="#forwards">
-				<!-- tmpl_var forward_to_a_friend default="0" -->
+				<!-- tmpl_var forward_to_a_friend_commified default="0" -->
 			</a>
 		</td> 
 	</tr>
