little HTML bug

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -70,7 +70,7 @@
 	</div>
 
 
-<div id="show_table_results" min-height:100px"></div>	
+<div id="show_table_results" style="min-height:100px"></div>	
 
 <fieldset> 
  <legend>Export Tracker Data (.csv)</legend> 
