Long URLs should now be reported in a more easy-to-view style.

--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -406,9 +406,9 @@
 						<tbody>
 						<!-- tmpl_loop url_report --> 
 							<tr> 
-								<td> 
-									<a href="<!-- tmpl_var url -->" target="_blank"> 
-										<!-- tmpl_var url escape="HTML" -->
+								<td data-text="<!-- tmpl_var url -->"> 
+									<a href="<!-- tmpl_var url -->" target="_blank" title="<!-- tmpl_var url -->"> 
+										<!-- tmpl_var url_snipped escape="HTML" -->
 									</a> 
 								</td> 
 								<td class="text-right"> 
