--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -95,7 +95,7 @@
 				<div id="the_basics_opens_loading"></div>
 			</div>
 			<div class="large-4 medium-4 columns">
-					<div id="the_basics_unsubscribes" data-title="Unsubscribes" data-label="Unsubscribes"></div>
+					<div id="the_basics_unsubscribes" data-title="Unsubscriptions" data-label="Unsubscriptions"></div>
 					<div id="the_basics_unsubscribes_loading"></div>
 			</div>
 		</div>
@@ -106,7 +106,7 @@
 				<div id="the_basics_bounces_loading"></div>
 			</div>
 			<div class="large-4 medium-6 columns">
-					<div id="the_basics_unsubscribes" data-title="Unsubscribes" data-label="Unsubscribes"></div>
+					<div id="the_basics_unsubscribes" data-title="Unsubscriptions" data-label="Unsubscriptions"></div>
 					<div id="the_basics_unsubscribes_loading"></div>
 			</div>
 		</div>	
@@ -191,7 +191,7 @@
 		<tr>
 			<td> 
 				<strong><a href="#unsubscribes">
-								Unsubscribes
+								Unsubscriptions
 							</a></strong>
 			</td> 
 			<td class="text-right"> 
@@ -289,7 +289,7 @@
 	    <dd data-magellan-arrival="subscriber_activity"><a href="#subscriber_activity">Subcriber Activity</a></dd>
 	    <dd data-magellan-arrival="opens"><a href="#opens">Opens</a></dd>
 	    <dd data-magellan-arrival="clickthroughs"><a href="#clickthroughs">Clickthroughs</a></dd>
-	    <dd data-magellan-arrival="unsubscribes"><a href="#unsubscribes">Unsubscribes</a></dd>
+	    <dd data-magellan-arrival="unsubscribes"><a href="#unsubscribes">Unsubscriptions</a></dd>
 	    <dd data-magellan-arrival="bounces"><a href="#bounces">Bounces</a></dd>
 	    <dd data-magellan-arrival="sending_errors"><a href="#sending_errors">Sending Errors</a></dd>
 	    <dd data-magellan-arrival="abuse_reports"><a href="#abuse_reports">Abuse Reports</a></dd>
@@ -365,7 +365,7 @@
 					<input type="hidden" name="prm"    value="export_subscribers" > 
 					<input type="hidden" name="type" value="opens" > 
 					<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" >
-					<input type="submit" value="Export Subscribers Opening This Message" class="success button" > 
+					<input type="submit" value="Export Open Data" class="success button" > 
 				</form>
 				</li>
 			</ul>
@@ -465,7 +465,7 @@
 						<input type="hidden" name="prm"  value="export_subscribers" > 
 						<input type="hidden" name="type" value="clickthroughs" > 
 						<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" >
-						<input type="submit" value="Export Subscribers Clickthroughing This Message" class="success button" > 
+						<input type="submit" value="Export Clickthrough Data" class="success button" > 
 					</form>
 				</li>
 			</ul>
@@ -477,7 +477,7 @@
 	<!-- /tmpl_if -->
 
 	<h2 data-magellan-destination="unsubscribes">
-		Unsubscribes
+		Unsubscriptions
 	</h2>
 	<a name="unsubscribes"></a>		
 	
@@ -491,13 +491,13 @@
 				</div> 
 				<div class="large-8 medium-8 columns">
 					<div id="unsubscribe_graph_loading"></div> 
-					<div id="unsubscribe_graph" data-title="Unsubscribes"></div> 
+					<div id="unsubscribe_graph" data-title="Unsubscriptions"></div> 
 				</div> 	
 			</div> 
 		<!-- /tmpl_if --> 
 	
 		<h2>
-			Unsubscribes Over Time
+			Unsubscriptions Over Time
 		</h2> 
 		<div id="over_time_unsubscribe_graph_loading"></div> 
 		<div id="over_time_unsubscribe_graph"></div>
@@ -618,7 +618,7 @@
 					<input type="hidden" name="flavor"    value="export_subscribers" > 
 					<input type="hidden" name="type" value="abuse_reports" > 
 					<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" >
-					<input type="submit" value="Export Subscribers Reporting Abuse for This Message" class="success button" > 
+					<input type="submit" value="Export Abuse Report Data" class="success button" > 
 					</form>
 				</li>
 			</ul>
